# autonomous-drone

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
configs/: real_drone.json  real_drone_uart.example.json  sitl_follow.example.json  sitl_follow.local.json
src/autonomous_drone/: __init__.py  app.py  config.py  control.py  generate_graphs.py  mavlink.py  metrics.py  models.py  perception.py
tests/: test_app.py  test_config.py  test_control.py  test_mavlink.py  test_metrics.py  test_perception.py
yolo11n-custom_ncnn_model/: metadata.yaml  model_ncnn.py
yolo11n-pose_ncnn_model/: metadata.yaml  model.ncnn.param
yolo11n_ncnn_model/: metadata.yaml
